<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView_Tareas"
        android:layout_width="409dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Tareas"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:listitem="@layout/item_recycler" />
    <TextView
        android:id="@+id/tv_Tareas"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:text="@string/noTareas"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_noTarPri"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:text="@string/noTarPri"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Tareas"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="7dp"
        android:layout_marginTop="1dp"
        android:text="@string/button"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>