<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/primero_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".fragmentos.Datos_Primer_Fragmento">

    <LinearLayout
        android:id="@+id/bac"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorControlActivated"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anton"
                android:text="@string/nombre_Tarea"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/tv_nombreTareaa"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/anton"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/fecha_creacion"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/tv_fechaCreacion"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="@font/anton"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/fecha_objetivo"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/tv_fechaObjetivo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="@font/anton"
                android:inputType="text"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Progreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/progreso"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/sp_progreso"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp">

            <TextView
                android:id="@+id/cb_Prioritaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/prioritaria"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:buttonTint="#000000" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/bordes_item"
            android:text="@string/bt_fragment_siguiente"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_cerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_item"
            android:text="@string/cerrar"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</FrameLayout>