<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3sp"
    app:cardBackgroundColor="#E65E5C5C"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/idImagen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/btn_star" />

                    <TextView
                        android:id="@+id/tv_NombreTarea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombreTarea"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#F4F4F4" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/barra_progreso"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="78dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_formato"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/formato_fecha"
                        android:textAlignment="viewStart"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#F4F4F4" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_quedan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/quedan"
                    android:textAlignment="viewEnd"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#F4F4F4"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/tv_dias_restantes"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/numDias"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#F4F4F4"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/tv_dias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/dias"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#F4F4F4"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
        </LinearLayout>

        <TextView

            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="11dp"
            android:background="@color/black" />
    </LinearLayout>


</androidx.cardview.widget.CardView>